--- a/rustv1/examples/s3/Cargo.toml
+++ b/rustv1/examples/s3/Cargo.toml
@@ -21,14 +21,14 @@ assert_cmd = "2.0"
 predicates = "3.0.3"
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
 # snippet-start:[s3.rust.s3-object-lambda-cargo.toml]
 aws-endpoint = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 # snippet-end:[s3.rust.s3-object-lambda-cargo.toml]
-aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["rt-tokio"]}
-aws-smithy-runtime = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-smithy-runtime-api = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["client"] }
-aws-smithy-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["http-body-0-4-x"] }
+aws-sdk-s3 = { features = ["rt-tokio"], version = "1.2.0"}
+aws-smithy-runtime = "1.0.1"
+aws-smithy-runtime-api = { features = ["client"],  version = "1.0.1"}
+aws-smithy-types = { features = ["http-body-0-4-x"],  version = "1.0.1"}
 sdk-examples-test-utils = { path = "../../test-utils" }
 anyhow = "1.0.70"
 bytes = "1.4.0"
