--- a/rustv1/cross_service/telephone/Cargo.toml
+++ b/rustv1/cross_service/telephone/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-sdk-polly = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-sdk-transcribe = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-smithy-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["rt-tokio"] }
+aws-config = "1.0.1"
+aws-sdk-polly = "1.2.0"
+aws-sdk-s3 = "1.2.0"
+aws-sdk-transcribe = "1.2.0"
+aws-smithy-types = { features = ["rt-tokio"],  version = "1.0.1"}
 anyhow = "1"
 tokio = { version = "1.20.1", features = ["full"] }
 bytes = "1"
