--- a/rustv1/examples/cloudwatch/Cargo.toml
+++ b/rustv1/examples/cloudwatch/Cargo.toml
@@ -11,8 +11,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-cloudwatch = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-cloudwatch = "1.2.0"
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
