--- a/rustv1/examples/custom-root-certificates/Cargo.toml
+++ b/rustv1/examples/custom-root-certificates/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 description = "An example demonstrating setting a custom root certificate with rustls"
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
 # bringing our own HTTPs so no need for the default features
-aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", default-features = false }
+aws-sdk-s3 = "1.2.0"
 tokio = { version = "1.21.2", features = ["full"] }
 rustls = "0.20.7"
 hyper-rustls = { version = "0.23.0", features = ["http2"] }
