--- a/rustv1/examples/dynamodb/Cargo.toml
+++ b/rustv1/examples/dynamodb/Cargo.toml
@@ -11,11 +11,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
 aws-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-smithy-runtime = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["test-util"] }
-aws-smithy-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-sdk-dynamodb = "1.2.0"
+aws-smithy-runtime = { features = ["test-util"],  version = "1.0.1"}
+aws-smithy-types = "1.0.1"
 axum = "0.5.16"
 clap = { version = "~4.4", features = ["derive"] }
 futures = "0.3"
