--- a/rustv1/examples/ebs/Cargo.toml
+++ b/rustv1/examples/ebs/Cargo.toml
@@ -10,9 +10,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-ebs = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-sdk-ec2 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-ebs = "1.2.0"
+aws-sdk-ec2 = "1.2.0"
 tokio = { version = "1.20.1", features = ["full"] }
 base64 = "0.13.0"
 sha2 = "0.9.5"
