--- a/rustv1/examples/ec2/Cargo.toml
+++ b/rustv1/examples/ec2/Cargo.toml
@@ -11,8 +11,8 @@ edition = "2021"
 
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-ec2 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-ec2 = "1.2.0"
 aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
