--- a/rustv1/examples/greengrassv2/Cargo.toml
+++ b/rustv1/examples/greengrassv2/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Aaron Tsui <aaron.tsui@outlook.com>"]
 edition = "2021"
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-greengrassv2 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-greengrassv2 = "1.2.0"
 aws-types = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
 tokio = { version = "1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
