--- a/rustv1/examples/rds/Cargo.toml
+++ b/rustv1/examples/rds/Cargo.toml
@@ -14,10 +14,10 @@ version = "0.1.0"
 anyhow = "1.0.75"
 assert_matches = "1.5.0"
 async-trait = "0.1.73"
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-smithy-runtime-api = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-sdk-rds = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-smithy-http = "0.60.0"
+aws-smithy-runtime-api = "1.0.1"
+aws-sdk-rds = "1.2.0"
 clap = { version = "~4.4", features = ["derive"] }
 inquire = "0.6.2"
 mockall = "0.11.4"
