--- a/rustv1/examples/secretsmanager/Cargo.toml
+++ b/rustv1/examples/secretsmanager/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 description = "Example usage of the SecretManager service"
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-secretsmanager = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-secretsmanager = "1.2.0"
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
