--- a/rustv1/examples/sending-presigned-requests/Cargo.toml
+++ b/rustv1/examples/sending-presigned-requests/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-smithy-client = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-s3 = "1.2.0"
+aws-smithy-client = "0.60.0"
 http = "0.2.6"
 hyper = "0.14"
 reqwest = "0.11"
