--- a/rustv1/examples/sitewise/Cargo.toml
+++ b/rustv1/examples/sitewise/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 # For more keys and their definitions, see https://doc.rust-lang.org/cargo/reference/manifest.html.
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-iotsitewise = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-smithy-types-convert = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = [
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-iotsitewise = "1.2.0"
+aws-smithy-types-convert = { features = [
   "convert-chrono",
-] }
+],  version = "0.60.0"}
 clap = { version = "~4.4", features = ["derive"] }
 thiserror = "1.0"
 tokio = { version = "1.20.1", features = ["full"] } 
