--- a/rustv1/examples/sts/Cargo.toml
+++ b/rustv1/examples/sts/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-sts = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-aws-types = {git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
-tokio = { version = "1.20.1", features = ["full"] }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-sts = "1.2.0"
+aws-smithy-types = "1.0.1"
+aws-types = "1.0.1"
 clap = { version = "~4.4", features = ["derive"] }
+tokio = { version = "1.20.1", features = ["full"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
-
