--- a/rustv1/examples/transcribestreaming/Cargo.toml
+++ b/rustv1/examples/transcribestreaming/Cargo.toml
@@ -10,8 +10,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
-aws-sdk-transcribestreaming = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
+aws-config = { features = ["behavior-version-latest"], version = "1.0.1"}
+aws-sdk-transcribestreaming = "1.2.0"
 async-stream = "0.3"
 bytes = "1"
 hound = "3.4"
