--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -211,9 +211,9 @@ bedrock-runtime_InvokeLlama2Async:
     bedrock-runtime: {InvokeModel}
 
 bedrock-runtime_InvokeStableDiffusion:
-  title: Invoke the Stability.ai Stable Diffusion XL model on &BR; to run an inference
-  title_abbrev: Invoke Stability.ai Stable Diffusion XL on &BR;
-  synopsis: invoke the Stability.ai Stable Diffusion xl on &BR; model to run inference.
+  title: Invoke the Stable Diffusion image generation model
+  title_abbrev: Image generation with Stable Diffusion
+  synopsis: invoke the Stable Diffusion image generation model.
   category:
   languages:
     Java:
@@ -236,9 +236,9 @@ bedrock-runtime_InvokeStableDiffusion:
     bedrock-runtime: {InvokeModel}
 
 bedrock-runtime_InvokeStableDiffusionAsync:
-  title: Asynchronously invoke the Stability.ai Stable Diffusion XL model on &BR; to run an inference
-  title_abbrev: Asynchronously invoke Stability.ai Stable Diffusion XL on &BR;
-  synopsis: asynchronously invoke the Stability.ai Stable Diffusion xl on &BR; model to run an inference.
+  title: Invoke the Stable Diffusion image generation model using the asynchronous client
+  title_abbrev: Image generation with Stable Diffusion using the async client
+  synopsis: asynchronously invoke the Stable Diffusion image generation model.
   category:
   languages:
     Java:
@@ -266,6 +266,14 @@ bedrock-runtime_InvokeTitanImage:
             - description: Invoke the Amazon Titan image generation model.
               snippet_tags:
                 - gov2.bedrock-runtime.InvokeTitanImage
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Amazon Titan image generation model.
+              snippet_tags:
+                - python.example_code.bedrock-runtime.InvokeTitanImage
   services:
     bedrock-runtime: {InvokeModel}
 
