--- a/.doc_gen/metadata/rds_metadata.yaml
+++ b/.doc_gen/metadata/rds_metadata.yaml
@@ -5,6 +5,15 @@ rds_Hello:
   synopsis: get started using &RDS;.
   category: Hello
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/rds
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - rds.java2.describe_instances.main
     .NET:
       versions:
         - sdk_version: 3
