--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -55,7 +55,7 @@ cross_PAM:
     PHP:
       versions:
         - sdk_version: 3
-          block_content: cross_PAM_php_block.xml
+          block_content: cross_PAM_PHP_block.xml
     Rust:
       versions:
         - sdk_version: 1
